--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -1245,7 +1245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ef0-Gv-OF7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1477.5" y="1957.5"/>
+            <point key="canvasLocation" x="1091.5" y="2079.5"/>
         </scene>
         <!--About Controller-->
         <scene sceneID="9Ia-T0-Lc6">
@@ -1286,6 +1286,7 @@
                                                     <segments>
                                                         <segment title="Bug"/>
                                                         <segment title="Feature Request"/>
+                                                        <segment title="Comment"/>
                                                     </segments>
                                                     <color key="tintColor" red="0.14332219569999999" green="0.15203450560000001" blue="0.16512784089999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <connections>
