--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -234,7 +234,7 @@
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
                                             <action selector="firstNameEditingDidBegin:" destination="zag-vu-qHB" eventType="editingDidBegin" id="DbM-9X-Nvz"/>
-                                            <action selector="firstNameEditingDidEnd:" destination="zag-vu-qHB" eventType="editingDidEnd" id="mgg-VR-OUi"/>
+                                            <action selector="firstNameEditingDidEnd:" destination="zag-vu-qHB" eventType="editingDidEnd" id="Rf1-CW-UbY"/>
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Message" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRP-Bu-4ZY">
@@ -2427,7 +2427,7 @@
         <image name="trafieText.png" width="305" height="98"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TBK-3x-6ed"/>
+        <segue reference="F7x-e7-sG4"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.60814687239999998" green="0.72578632440000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
